Bug:#2324 - SafePay: entering invalid chars: , and/or . makes the app stuck
fix sessionId not being reinit in the backend. UI stuck on loading, use response.rejected

--- a/root/src/main/webapp/css/modals/validateInput.css
+++ b/root/src/main/webapp/css/modals/validateInput.css
@@ -25,6 +25,7 @@
     display: block;
     padding: 3px 3px;
     font-size: 14px;
+    white-space: nowrap;
 }
 
 .sec-view div .selectList span {
